<resources>

    <string name="app_name">Sensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_overview">Sensors</string>
    <string name="menu_update">Update</string>
    <string name="menu_exit">Exit</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings">Settings</string>
    <string name="settings_url">URL</string>
    <string name="settings_hidden">Show hidden items</string>
    <string name="settings_auth">HTTP Basic Authentication</string>
    <string name="settings_refresh_interval">Interval (seconds)</string>
    <string name="settings_refresh">Update periodically</string>
    <string name="settings_header_general">General</string>
    <string name="settings_header_auth">Authentication</string>
    <string name="settings_header_refresh">Updates</string>
    <string name="settings_header_notifications">Updates</string>
    <string name="settings_notifications">Enable notifications</string>
    <string name="settings_notification_light">Enable notification LED</string>
    <string name="settings_notification_light_color">LED color</string>
    <string name="sensor_report">Sensor report</string>
    <string name="sensors_updated">Sensors updated</string>
    <string name="sensors_update_error">Error while updating sensors</string>
    <string name="error">Error</string>
    <string name="error_init_close">An error occurred while initializing the app. It will now close.</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_first_run">This is the first time you run this app. You will have to configure it in order to use it.</string>
    <string name="welcome">Welcome</string>
    <string name="error_invalid_value_ignored">The value \"%1$s\" is invalid and will be ignored.</string>
    <string name="notification_text">Sensors: %1$d|%2$s</string>
    <string name="notification_details">\u0020- %1$s: [%2$d]</string>
    <string name="status_updating">Updating…</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>