<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<PreferenceCategory android:title="@string/settings_header_general" android:key="settings_header_general">
    	<EditTextPreference android:title="@string/settings_url" android:key="settings_url"></EditTextPreference>
    </PreferenceCategory>
  	<PreferenceCategory android:title="@string/settings_header_auth" android:key="settings_header_auth">
  		<CheckBoxPreference android:title="@string/settings_auth" android:key="settings_auth"></CheckBoxPreference>
    	<EditTextPreference android:title="@string/settings_username" android:key="settings_username" android:enabled="true" android:dependency="settings_auth"></EditTextPreference>
    	<EditTextPreference android:title="@string/settings_password" android:key="settings_password" android:enabled="true" android:dependency="settings_auth" android:password="true"></EditTextPreference>
    </PreferenceCategory>
  	<PreferenceCategory android:title="@string/settings_header_refresh" android:key="settings_header_refresh">
    	<CheckBoxPreference android:title="@string/settings_refresh" android:key="settings_refresh" android:defaultValue="true"></CheckBoxPreference>
    	<EditTextPreference android:title="@string/settings_refresh_interval" android:key="settings_refresh_interval" android:dependency="settings_refresh" android:defaultValue="300" android:numeric="integer"></EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_header_notifications" android:key="settings_header_notifications">
    	<CheckBoxPreference android:title="@string/settings_notifications" android:key="settings_notifications" android:defaultValue="true"></CheckBoxPreference>
    	<CheckBoxPreference android:title="@string/settings_notification_light" android:key="settings_notification_light" android:defaultValue="true" android:dependency="settings_notifications"></CheckBoxPreference>
        <!-- <yuku.ambilwarna.widget.AmbilWarnaPreference android:key="settings_led_color" android:defaultValue="0xff00ff" android:title="@string/settings_notification_light_color" android:dependency="settings_notifications"/> -->
    </PreferenceCategory>
</PreferenceScreen>
